# multi-hub-project

./: .gitattributes  .platform.json  AI_RESOURCE_MANIFEST.json  API_GUIDE_LENGTH.md  API_INTEGRATION_GUIDE_PART1.md  API_INTEGRATION_GUIDE_PART2.md  API_INTEGRATION_GUIDE_PART3.md  API_INTEGRATION_GUIDE_PART4.md  API_INTEGRATION_GUIDE_PART5.md  API_INTEGRATION_GUIDE_PART6.md  API_INTEGRATION_GUIDE_PART7.md  API_INTEGRATION_GUIDE_PART8.md  BOLT_TO_GITHUB_WORKFLOW.md  CODESPACE_COMPLETE_GUIDE.md  CODESPACE_QUICK_COMMANDS.md  COMPLETE_PROJECT_ANALYSIS.md  COMPLETE_SETUP_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DOWNLOAD_GUIDE.md  FINAL_COMMIT_CHECK.md  FREE_TIER_ARCHITECTURE.md  GITHUB_PAGES_SETUP.md  GITHUB_PAGES_VS_NETLIFY.md  HUB-UI-COMPLETE.md  IPA-BUILDER-COMPLETE.md  MOBILE_CODESPACE_GUIDE.md  NETLIFY_AUTO_DEPLOY_CONFIRMED.md  NETLIFY_BUILD_FIX.md  NETLIFY_DEPLOYMENT_STATUS.md  NETLIFY_TOKEN_SETUP.md  NETLIFY_URLS_GUIDE.md  PLAN.md  PLATFORM_TXT_GUIDE.md  README.md  SECURE_PLATFORM_GUIDE.md  SECURITY_EXPLANATION.md  SECURITY_SHARING_GUIDE.md  SETUP_INSTRUCTIONS_MOBILE.md  SYSTEM_READY.md  UNLIMITED_FREE_SYSTEM.md  (+14 more)
.github/: plan
.windsurf/: README.md  audit_rundown.md  mcp_servers.json  mcp_servers_readonly.json  startpromt
.windsurf/rules_engine/: .clippy.toml  Cargo.toml  README.md
.windsurf/rules_engine/examples/: basic_usage.rs
.windsurf/rules_engine/src/: cache.rs  config.rs  error.rs  ffi.rs  lib.rs
.windsurf/rules_engine/src/core/: mod.rs
.windsurf/rules_engine/src/cpp/: wrapper.cpp  wrapper.h
.windsurf/rules_engine/src/memory/: alloc.rs  mod.rs  pool.rs
.windsurf/rules_engine/src/metrics/: mod.rs
.windsurf/rules_engine/src/parallel/: executor.rs  mod.rs  work_stealing.rs
.windsurf/rules_engine/src/rule/: mod.rs
.windsurf/rules_engine/src/simd/: mod.rs
.windsurf/rules_engine/tests/: parallel_test.rs
ANALYSE_v1/: function_by_function_breakdown.md  project_analysis.md  project_summary.md  simplified_platform_overview.md
DOCS/: 00_MASTER_DOCUMENTATION_INDEX.md
ai-models/: index.html  package.json  tsconfig.json  upload-path.json  upload-path.txt  vite.config.ts
alo1z-github-io/: .htaccess  README.md  add-user.html  auth.html  index.html  platform.txt  robots.txt  upload-path.json  upload-path.txt
analyse_v2/: 00_PROJECT_OVERVIEW.md  01_HUB_UI_ANALYSIS.md  02_IPA_BUILDER_ANALYSIS.md  03_AI_MODELS_ANALYSIS.md  04_PRINTER_BUILDER_ANALYSIS.md
api/: .eslintrc.json  index.html  package.json  tsconfig.json  upload-path.json  upload-path.txt
bolt-new/: index.html  package.json  upload-path.json  upload-path.txt
config/: auth-config.json  windsurf_deployment.yaml
game-builder/: index.html  netlify.toml  package.json  tsconfig.json  upload-path.json  upload-path.txt
github-pages-setup/: .platform.json  index.html  platform.txt
hub-ui/: .eslintrc.json  README.md  index.html  netlify.toml  package.json  upload-path.json  upload-path.txt  vite.config.ts
ipa-builder/: index.html  package.json  upload-path.json  upload-path.txt
(+323 files in other folders)
